--- a/fnfl/templates/fnfl/base.html
+++ b/fnfl/templates/fnfl/base.html
@@ -22,9 +22,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
-<body>
+<body style="background-color: GhostWhite; padding-left: 0">
   <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container-fluid" style="background-color: black">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
@@ -32,18 +32,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{% url 'welcome' %}">FNFL Dawgs</a>
+        <img class="navbar-brand" src="{% static 'images/helmet2.png' %}"/>
+        <a class="navbar-brand" style="color: white; font-size: 2em;" href="{% url 'welcome' %}">FNFL Dawgs</a>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
 {% if user.is_authenticated %}
-          <li><a href="{% url 'lineup_new' %}">New Lineup</a></li>
-          <li><a href="{% url 'lineup_list' %}">Published Lineups</a></li>
-          <li><a href="{% url 'player_usage' %}">Player Usage</a></li>
-          <li><a href="{% url 'logout' %}">Log Out</a></li>
+          <li><a style="color: white;" href="{% url 'lineup_new' %}">New Lineup</a></li>
+          <li><a style="color: white;" href="{% url 'lineup_list' %}">Published Lineups</a></li>
+          <li><a style="color: white;" href="{% url 'player_usage' %}">Player Usage</a></li>
+          <li><a style="color: white;" href="{% url 'logout' %}">Log Out</a></li>
 {% else %}
-          <li><a href="{% url 'login' %}">Login</a></li>
+          <li><a style="color: white;" href="{% url 'login' %}">Login</a></li>
 {% endif %}
         </ul>
       </div>
