Adding support for raw score points

--- a/fnfl/templates/fnfl/base.html
+++ b/fnfl/templates/fnfl/base.html
@@ -42,6 +42,7 @@
           <li><a style="color: white;" href="{% url 'lineup_new' %}">New Lineup</a></li>
           <li><a style="color: white;" href="{% url 'lineup_list' %}">Published Lineups</a></li>
           <li><a style="color: white;" href="{% url 'player_usage' %}">Player Usage</a></li>
+          <li><a style="color: white;" href="{% url 'raw_scores' %}">Raw Scores</a></li>
           <li><a style="color: white;" href="{% url 'logout' %}">Log Out</a></li>
 {% else %}
           <li><a style="color: white;" href="{% url 'login' %}">Login</a></li>
