Changing Published Lineups to Linues

--- a/fnfl/templates/fnfl/base.html
+++ b/fnfl/templates/fnfl/base.html
@@ -40,7 +40,7 @@
         <ul class="nav navbar-nav navbar-right">
 {% if user.is_authenticated %}
           <li><a style="color: white;" href="{% url 'lineup_new' %}">New Lineup</a></li>
-          <li><a style="color: white;" href="{% url 'lineup_list' %}">Published Lineups</a></li>
+          <li><a style="color: white;" href="{% url 'lineup_list' %}">Lineups</a></li>
           <li><a style="color: white;" href="{% url 'player_usage' %}">Player Usage</a></li>
           <li><a style="color: white;" href="{% url 'raw_scores' %}">Raw Scores</a></li>
           <li><a style="color: white;" href="{% url 'logout' %}">Log Out</a></li>
